--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.12.10",
+    "mongoose": "^8.5.0",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "react": "^18.3.1",
