--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.19",
+    "axios": "^1.7.2",
     "daisyui": "^4.12.10",
     "mongoose": "^8.5.0",
     "next": "^14.2.4",
