--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
     "daisyui": "^4.12.10",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.0",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
